k8s/api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: api
  template:
    metadata:
      labels:
        component: api
    spec:
      containers:
        - image: nqhuy213/scheduler-api:1.0.0
          name: api
          ports:
            - containerPort: 3001
          imagePullPolicy: Always
